--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,14 @@
     "axios": "^1.7.2",
     "framer-motion": "^11.3.2",
     "react": "^18.3.1",
+    "react-3d-earth": "^1.0.5",
     "react-dom": "^18.3.1",
+    "react-globe.gl": "^2.27.2",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
     "socket.io-client": "^4.7.5",
     "split-pane-react": "^0.1.3",
+    "three": "^0.166.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
