--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@excalidraw/excalidraw": "^0.17.6",
+    "@heroui/system": "^2.4.11",
+    "@heroui/theme": "^2.4.11",
+    "@heroui/toast": "^2.0.5",
     "@monaco-editor/react": "^4.6.0",
     "@nextui-org/react": "^2.4.2",
     "axios": "^1.7.2",
-    "framer-motion": "^11.3.2",
+    "framer-motion": "^12.4.7",
     "react": "^18.3.1",
     "react-3d-earth": "^1.0.5",
     "react-dom": "^18.3.1",
